# LARPlayer

./: CMakeLists.txt  README.md  database_manager.cpp  database_manager.h  icons.h  keyboarddialog.hpp  m4b_player.cpp  music_backend.cpp  music_backend.h
assets/: bluetooth-lr_icon.h  bookmark-lr_icon.h  bookmark_icon.h  bookmarklist-lr_icon.h  bookmarklist_icon.h  chapters-lr_icon.h  chapters_icon.h  close-lr_icon.h  display-lr_icon.h  fast_forward-lr_icon.h  fast_rewind-lr_icon.h  history-lr_icon.h  open-lr_icon.h  pb.sh  play_pause-lr_icon.h  start_lark.sh  start_larp.sh  sunny-lr_icon.h  title-lr.h
assets/booklet/: lark.sh  larp.sh
assets/kual/: config.xml
mpeg4/: mp4read.c  mp4read.h
